--- a/cryptocharter/package.json
+++ b/cryptocharter/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
